--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,10 +25,18 @@ body {
     margin : 0;
     overflow-x: hidden;
     min-height: 100%;
+    font-family: RobotoRegular ;
+    /* background-color: #0ad3ef; */
+
+
 }
 
 header{
     background-image: url(../source/image/banner-overlay-img.png) ;
+    background-size: cover;
+    background-color: #091853;
+    height: 50em;
+    
 }
 
 
@@ -37,8 +45,9 @@ nav{
     justify-content: space-between ;
     color : white ;
     width: 100%;
-    height: auto;
+    height: 20%;
     gap : 200px;
+    /* border: 5px solid orange; */
 }
 
 .menuNav {
@@ -54,9 +63,10 @@ nav{
 }
 
 .logoNav {
-    width: 30%;
+    width: 60%;
     display: flex;
     justify-content: flex-end;
+    /* border : 5px solid black; */
 }
 
 a {
@@ -67,32 +77,100 @@ a {
 .infoHead{
     display: flex;
     flex-direction: row;
-    width: 100%;
-    justify-content: space-between ;
+    height:80%;
+    /* width: 100%; */
+    align-items: center;
+    justify-content: flex-end;
     color : white ;
-    width: 100%;
-    height: auto;
-    gap : 200px;
+    /* height: auto; */
+    /* gap : 200px; */
+    /* border : 5px solid red; */
 }
 
 .imgBannerHead {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
+    align-items: center;
+    width: 40%;
+    height: 65%;
+    /* height: auto; */
+    /* border : 5px solid yellow; */
+
 }
 
 .imgBannerHead img{
-    height: 200px;
-    width: 160px;
+    height: 80%;
+    width: 75%;
 }
 
-.infoCyberSec{
+.infoCybersec{
     display: flex;
-    width: 50%;
-    align-content: flex-end;
+    width: 30%;
+    /* align-content: flex-end; */
+    height: 60% ;
+    flex-direction: column;
+
+    /* border : 5px solid green; */
+
+}
+
+#btnContact {
+    background-color: #0ad3ef;
+    display: flex;
+    height: 25%;
+    width: 20%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    border : none ;
+    color :white;
 }
 
 
-button{
+#btnStart, #btnFond{
+    /* border : 5px solid red; */
+    background-color: #0ad3ef;
+    display: flex;
+    width: 45%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    padding: 5%;
+    border : none ;
+    color : white;
+}
 
+#btnStart:hover {
+    background-color:#091853 ;
+}
+
+
+#btnFond:hover {
+    background-color:#091853 ;
+}
+
+#btnFond{
+    background-color:  #2251a0;
+    color :white;
+}
+
+.btnContact{
+    background-color: #0ad3ef;
+    justify-content: center;
+    align-items: center;
+    /* border-radius: 25%; */
+    border : none ;
+    color : white;
+}
+
+.bntHeader {
+    display:flex;
+    flex-direction: row ;
+    gap : 10px;
+    /* border : 5px solid orange; */
+    height: 8%;
+    /* width: ; */
+    justify-content: center;
 }
 
