--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@ a {
     justify-content: flex-end;
     color : white ;
     /* height: auto; */
-    /* gap : 200px; */
+    gap : 20px;
     /* border : 5px solid red; */
 }
 
@@ -132,7 +132,7 @@ a {
     background-color: #0ad3ef;
     display: flex;
     width: 45%;
-    height: 100%;
+    height: 80%;
     justify-content: center;
     align-items: center;
     border-radius: 50px;
@@ -172,5 +172,11 @@ a {
     height: 8%;
     /* width: ; */
     justify-content: center;
+        margin-top: 0;
+
+}
+
+#paraCyber{
+    margin-top : 10px;
 }
 
