add hover button Border

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,11 +143,13 @@ a {
 
 #btnStart:hover {
     background-color:#091853 ;
+    border: solid 2px #0ad3ef ;
 }
 
 
 #btnFond:hover {
     background-color:#091853 ;
+    border : 2px solid #2251a0 ;
 }
 
 #btnFond{
