--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,99 @@ body {
     min-height: 100%;
 }
 
+@font-face {
+    font-family: OswaldMedium;
+    src: url(../source/fonts/OswaldMedium.ttf);
+}
+
+@font-face {
+    font-family: OswaldRegular;
+    src: url(../source/fonts/OswaldRegular.ttf);
+}
+
+@font-face {
+    font-family: RobotoBold;
+    src: url(../source/fonts/RobotoBold.ttf);
+}
+@font-face {
+    font-family: RobotoMedium;
+    src: url(../source/fonts/RobotoMedium.ttf);
+}
+@font-face {
+    font-family: RobotoRegular;
+    src: url(../source/fonts/RobotoRegular.ttf);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    margin : 0;
+    overflow-x: hidden;
+    min-height: 100%;
+} 
+
+.ourNews {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:#0a1650 ;
+    background-image: url(../img/dots-img\ reverse.png);
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: left;
+    
+    /* background-position-x: right; */
+    padding: 1%;
+    /* border: 5px solid red !important; */
+}
+
+.txtOurNews {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.txtOurNews p{
+    color : #0bd2ef;
+    margin: 0;
+    padding: 1%;
+}
+
+.txtOurNews h1{
+    color : white !important;
+    margin : 0;
+}
+
+.deuxBlocs{
+    display: flex;
+    gap : 5%;
+    
+    
+}
+
+.blocUn{
+    background-image: url(../img/blog-post-img1.png);
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    background-position: center;
+    /* height: 100%;
+    width: 400px; */
+    border-radius: 5px;
+}
+
+.blocDeux{
+    background-image: url(../img/blog-post-img2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+
+}
