--- a/public/css/style.css
+++ b/public/css/style.css
@@ -31,25 +31,6 @@ body {
 
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 header{
     background-image: url(../source/image/banner-overlay-img.png) ;
     background-size: cover;
@@ -136,7 +117,7 @@ a {
 #btnContact {
     background-color: #0ad3ef;
     display: flex;
-    height: 25%;
+    height: 30%;
     width: 20%;
     justify-content: center;
     align-items: center;
@@ -146,12 +127,12 @@ a {
 }
 
 
-#btnStart, #btnFond{
+#btnStart, #btnFond {
     /* border : 5px solid red; */
     background-color: #0ad3ef;
     display: flex;
-    width: 45%;
-    height: 80%;
+    width: 35%;
+    height: 70%;
     justify-content: center;
     align-items: center;
     border-radius: 50px;
@@ -160,7 +141,18 @@ a {
     color : white;
 }
 
-#btnStart:hover {
+#btnStartWwdo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background-color: #0ad3ef;
+    padding : 1%;
+    width: 10%;
+    height: 10%;
+}
+
+#btnStart:hover, #btnStartWwdo:hover {
     background-color:#091853 ;
     border: solid 2px #0ad3ef ;
 }
@@ -180,7 +172,9 @@ a {
     background-color: #0ad3ef;
     justify-content: center;
     align-items: center;
-    /* border-radius: 25%; */
+    padding: 1%;
+    height: 10%;
+    width: 15%;
     border : none ;
     color : white;
 }
@@ -218,7 +212,7 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-  align-items: center;
+    align-items: center;
     background: #0a1650;
 }
 
@@ -245,8 +239,8 @@ a {
     height: 50%;
     width: 100%;
     display: flex;
-   justify-content: center;
-   gap: 2%;
+    justify-content: center;
+    gap: 2%;
 }
 
 .imgPartners div{
@@ -268,7 +262,7 @@ a {
 
 .imgPartners div:hover{
     background: #0bd2ef;
- 
+
     
 }
 
@@ -481,24 +475,24 @@ color : #5E70B5;
 
 }
 
-#btnStart{
+/* #btnStart{
     background-color: #0ad3ef;
     display: flex;
     width: 10%;
-    /* height: 10%; */
+    /* height: 10%; 
     justify-content: center;
     align-items: center;
     border-radius: 50px;
     padding: 5%;
     border : none ;
     color : white;
-    text-decoration: none;
-}
+    text-decoration: none; 
+}*/
 
-#btnStart:hover {
+/* #btnStart:hover {
     background-color:#091853 ;
     border: solid 2px #0ad3ef ;
-}
+} */
 
 
 
@@ -783,15 +777,7 @@ align-items: center;
     text-decoration: none;
 
 }
-.started{
-    background: #0bd2ef;
-    height: 8%;
-    width: 25%;
-    border-radius: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 
 
@@ -913,7 +899,7 @@ align-items: center;
 } 
 
 
-#title:hover, h1:hover, #read:hover, a:hover {
+#title:hover, #hTitle:hover, #read:hover {
 
     color :#0bd2ef;
 
@@ -1042,7 +1028,7 @@ textarea {
 .champsArea {
 flex-basis: 100%;}
 
-#btnContact {
+/* #btnContact {
     background-color: #0ad3ef;
     display: flex;
     justify-content: center;
@@ -1051,7 +1037,7 @@ flex-basis: 100%;}
     border : none ;
     color :white;
     text-decoration: none;
-    padding : 5px;}
+    padding : 5px;} */
 
 .btnSubmit{
     display: flex !important;
