--- a/public/css/style.css
+++ b/public/css/style.css
@@ -311,17 +311,17 @@ a {
     width: 100%;
     display: flex;
     background: #0a1650;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
-    gap: 5%;
+    gap: 2%  ;
     padding-top: 100px;
     padding-bottom: 100px;
 }
 
 
 .imgWhoWeAre{
-    height: 25em;
-    width: 25em;
+    height: 30em;
+    width: 35em;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -335,14 +335,16 @@ a {
 
 .txtWhoWeAre{
     height: 25em;
-    width: 30%;
+    width: 35em;
     display: flex;
     flex-direction: column;
+    gap: 3%;
 
 }
 .txtWhoWeAre h5{
     margin: 0;
     padding: 0;
+    font-size: 120%;
     color: #3195c7;
    
 }
@@ -350,25 +352,27 @@ a {
     margin: 0;
     padding: 0;
     color: white;
+    font-size: 280%;
 }
 .txtWhoWeAre p{
     margin: 0;
     padding: 0;
     color:  #5a6cb2;
-    font-size: 80%;
+    font-size: 110%;
+    padding-bottom: 10px;
 }
-
-
-
 
 
 
 .txtWhoWeAre ul {
     --icon-space: 1.5em;
-    list-style: none;
     padding: 0;
 }
+
+
+
 .txtWhoWeAre li{
+    
     padding-left: var(--icon-space);
     color: #91B4F1;
     font-family: "RobotoRegular";
@@ -391,12 +395,17 @@ a {
 
 .logoWhoWeAre{
     
-    height: 100%;
-    width: 20%;
+    height: 20em;
+    width: 18em;
     background: url(../source/image/dots-img.png);
     background-repeat: no-repeat;
     background-position: center;
 }
+
+
+
+
+
 
 
 
