--- a/public/css/style.css
+++ b/public/css/style.css
@@ -395,11 +395,12 @@ a {
 
 .logoWhoWeAre{
     
-    height: 20em;
-    width: 18em;
+    height: 22em;
+    width: 19em;
     background: url(../source/image/dots-img.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: 80%;
 }
 
 
@@ -540,14 +541,17 @@ color : #5E70B5;
 
 .cyberSecurity{
     width: 100%;
-    height: 50em;
+    height: auto;
  display: flex;
-
+align-items: center;
  background-color: #0a1650;
+
+
 }
 
+
 .imgCyber{
-    height: 100%;
+    height: 45em;
     width: 50%;
     background: url(../source/image/service-right-bg-img.png);
     background-size: cover;
@@ -558,6 +562,10 @@ color : #5E70B5;
     align-items: flex-end; 
 }
 
+
+
+
+
 .imgCyber:hover  .read{
     opacity: 1;
     transition: 2s;
@@ -567,11 +575,12 @@ color : #5E70B5;
 
 
 
-.imgCyber div{
-    height: 40%;
-    width: 25%;
+
+.imgCyber .read{
+    height: 40%!important;
+    width: 50% !important; 
+    border-top-left-radius: 10px;
  background: #22c7e6;
- border-radius: 10%;
  display: flex;
  flex-direction: column;
  justify-content: center;
@@ -603,10 +612,13 @@ color : #5E70B5;
 
 .bgCyber{
     width: 20%;
+    height: 25em;
     background: url(../source/image/dots-img.png);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     transform: scaleX(-1); /* flip vertically */
+    margin-right: 80px;
     
 }
 
@@ -615,23 +627,31 @@ color : #5E70B5;
 
 .txtCyber{
     width: 30%;
+    height: 45em;
     display: flex;
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    
 }
 .txtCyberService{
     height: 80%;
     width: 90%;
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
 }
 .txtCyberService h1{
     color: white;
+    font-size: 250%;
 }
 .txtCyberService h5{
     color: #22c7e6;
+    font-size: 150%;
 }
 .txtCyberService p{
     color: #5f6fb2;
+    font-size: 120%;
 }
 
 
@@ -675,6 +695,7 @@ svg circle{
     stroke-dasharray: 190%;
     stroke-dashoffset: 190%;
     stroke-linecap: round;
+   
 }
 svg:hover .quatrevignt{
     stroke-dashoffset: 28.5%;
@@ -697,7 +718,7 @@ svg:hover .soixante{
 span{
     font-size: large;
     position: absolute;
-    bottom: 65%;
+    bottom: 50%;
     left: 38%;
     color: white;
      
@@ -1109,7 +1130,7 @@ flex-basis: 100%;}
 
 footer{
     background-color: #122061;
-    height: 25em;
+    height: auto;
     width: 100%;
 
     
@@ -1120,7 +1141,7 @@ footer{
     background-size: cover;
     background-position: center;
     display: flex;
-    height: 90%;
+    height: 20em;
     justify-content: center;
     gap: 2%;
     align-items: center;
@@ -1137,16 +1158,19 @@ footer{
 
 
 .logoFooter{
-    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
     width: 20%;
 }
 .logoFooter img{
-height: 60%;
-width: 60%;
+height: 150px;
+width: 170px;
 
 }
 .aboutFooter{
-    height: 80%;
+    height: 100%;
     width: 10%;
     display: flex;
     flex-direction: column;
@@ -1172,7 +1196,7 @@ width: 60%;
 
 
 .servicesFooter{
-    height: 80%;
+    height: 100%;
     width: 10%;
     display: flex;
     flex-direction: column;
@@ -1194,8 +1218,13 @@ width: 60%;
     margin: 0;
 }
 .resaux{
-    height: 10%;
+    width: 60px;
+    height: 20px;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25%;
+    
     
    
     
@@ -1204,8 +1233,8 @@ width: 60%;
 
 
 .resaux img{
-    height: 50%;
-    width: 50%;
+    height: 65%;
+    width: 65%;
     filter: invert(100);
 }
 
@@ -1218,13 +1247,15 @@ width: 60%;
 
 
 
-.newLetter{
-    height: 80%;
+.newsLetter{
+    height: 35%;
     width: 10%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 10px;
+  
     
 }
 
@@ -1233,10 +1264,10 @@ width: 60%;
 #enter{
     background:rgba(245, 222, 179, 0);
     border: solid rgba(128, 128, 128, 0.422) 1px;
-    border-radius: 5%;
+    border-radius: 5px;
     position: relative;
-    height: 25px;
-    width: 100%;
+    height: 40px;
+    width: 200px;
 }
 
 .send{
@@ -1245,8 +1276,8 @@ width: 60%;
 #submit{
     position: absolute;
     background:rgba(245, 222, 179, 0);
- right:2%;
- top: 3%;
+ right:10%;
+ top: 25%;
 border: none;
 }
 #submit:active{
@@ -1260,9 +1291,11 @@ border: none;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
     gap: 2%;
+    font-size: 15px;
 }
-.agreeFooter button{
+.agreeFooter input{
    height: 15px;
    width: 10%;
    background: rgba(220, 220, 220, 0);
@@ -1290,5 +1323,6 @@ border: none;
 
 .footerBottom p {
     color: #bfbbc3 ;
+   
 
 }
