--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,171 +37,180 @@ body {
 }
 
 
-header{
-    background-image: url(../source/image/banner-overlay-img.png) ;
-    background-size: cover;
-    background-color: #091853;
-    height: 50em;
-    width: 100%;
+header {
+        background: url(../source/image/banner-overlay-img.png) ;
+        background-color: #081750;
+        background-size: cover;
+        /* background-color: #091853; */
+        height: 50em;
+        width: 100%;
+        /* border: 1px solid red */
+    }
     
-}
+    
+    nav{
+        display: flex;
+        justify-content: center ;
+        color : white ;
+        width: 100%;
+        height: 30%;
+        gap : 60px;
+        /* border: 1px solid orange; */
+        padding-top: 70px;
+    
+    }
+    
+    .menuNav {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        /* border : 2px solid black; */
+        gap : 25px;
+        font-family: url(../source/fonts/RobotoRegular.ttf);
+        margin-right: 100px;
+        /* font-weight:bold; */
+        width:100%;
+        font-size: 10px;
+    }
+    
+    
+    
+    .logoNav {
+        margin-left: 80px;
+        width: 45%;
+        display: flex;
+        justify-content: flex-end;
+        /* border : 5px solid rgb(0, 128, 122); */
+        margin-left: 200px;
+        margin-top: 10px;
+    }
+    
+    .logoNav img{
+        /* padding-top: 10px; */
+        margin-right: 20px;
+        padding-bottom: 50px;
+    
+    }
+    
+    .menuNav a {
+        color : white ;
+        text-decoration: none;
+    }
 
-
-nav{
-    display: flex;
-    justify-content: space-between ;
-    color : white ;
-    width: 100%;
-    height: 20%;
-    gap : 200px;
-    /* border: 5px solid orange; */
-}
-
-.menuNav {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    /* border : 2px solid black; */
-    gap : 15px;
-    font-family: url(../source/fonts/RobotoRegular.ttf);
-    /* margin-right: 100px; */
-    /* font-weight:bold; */
-    width: 70%;
-}
-
-.logoNav {
-    width: 60%;
-    display: flex;
-    justify-content: flex-end;
-    /* border : 5px solid black; */
-}
-
-a {
-    color : white ;
-    text-decoration: none;
-}
-
-.infoHead{
-    display: flex;
-    flex-direction: row;
-    height:80%;
-    /* width: 100%; */
-    align-items: center;
-    justify-content: flex-end;
-    color : white ;
-    /* height: auto; */
-    gap : 20px;
-    /* border : 5px solid red; */
-}
-
-.imgBannerHead {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    width: 40%;
-    height: 65%;
-    /* height: auto; */
-    /* border : 5px solid yellow; */
-
-}
-
-.imgBannerHead img{
-    height: 80%;
-    width: 75%;
-}
-
-.infoCybersec{
-    display: flex;
-    width: 30%;
-    /* align-content: flex-end; */
-    height: 60% ;
-    flex-direction: column;
-
-    /* border : 5px solid green; */
-
-}
-
-#btnContact {
-    background-color: #0ad3ef;
-    display: flex;
-    height: 30%;
-    width: 20%;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-    border : none ;
-    color :white;
-}
-
-
-#btnStart, #btnFond {
-    /* border : 5px solid red; */
-    background-color: #0ad3ef;
-    display: flex;
-    width: 35%;
-    height: 70%;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50px;
-    padding: 5%;
-    border : none ;
-    color : white;
-}
-
-#btnStartWwdo{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50px;
-    background-color: #0ad3ef;
-    padding : 1%;
-    width: 10%;
-    height: 10%;
-}
-
-#btnStart:hover, #btnStartWwdo:hover {
-    background-color:#091853 ;
-    border: solid 2px #0ad3ef ;
-}
-
-
-#btnFond:hover {
-    background-color:#091853 ;
-    border : 2px solid #2251a0 ;
-}
-
-#btnFond{
-    background-color:  #2251a0;
-    color :white;
-}
-
-.btnContact{
-    background-color: #0ad3ef;
-    justify-content: center;
-    align-items: center;
-    padding: 1%;
-    height: 10%;
-    width: 15%;
-    border : none ;
-    color : white;
-}
-
-.bntHeader {
-    display:flex;
-    flex-direction: row ;
-    gap : 10px;
-    /* border : 5px solid orange; */
-    height: 8%;
-    /* width: ; */
-    justify-content: center;
+    .menuNav a:hover {
+        border-bottom: solid white 2px;
+    }
+    
+    
+    .infoHead{
+        display: flex;
+        flex-direction: row;
+        height:80%;
+        /* width: 100%; */
+        align-items: flex-start;
+        justify-content: flex-start;
+        color : white ;
+        /* height: auto; */
+        /* gap : 20px; */
+        /* border : 5px solid rgb(0, 255, 140); */
+    }
+    
+    .infoCybersec{
+        display: flex;
+        width: 60%;
+        /* align-content: flex-end; */
+        height: 60% ;
+        flex-direction: column;
+        margin-left: 250px;
+        /* border : 1px solid green; */
+        gap: 5px;
+        padding-top: 130px;
+    }
+    
+    
+    .infoCybersec p {
+        font-size: x-small;
+        padding-bottom: 10px;
+        color : #A3B1EE
+    }
+    
+    .btnHeader {
+        display:flex;
+        flex-direction: row ;
+        gap : 10px;
+        /* border : 5px solid orange; */
+        height: 8%;
+        justify-content: flex-start;
         margin-top: 0;
-
-}
-
-#paraCyber{
-    margin-top : 10px;
-}
-
+    }
+    
+    #btnHeadStart {
+        background-color: #0ad3ef;
+        display: flex;
+        width: 15%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        padding: 2.5%;
+        color : white;
+        font-size: 10px;
+        gap: 10px;
+    }
+    #btnHeadStart:hover{
+        background-color:#081750;
+        border: #0AD3EF solid 1px;
+    }
+    
+    #btnHeadContact {
+        background-color:#2251a0;
+        display: flex;
+        width: 15%;
+        height: 100%;
+        padding: 2.5%;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        color : white;
+        font-size: 10px;
+        gap: 10px;
+    }
+    #btnHeadContact:hover {
+        background-color:#081750;
+        border: #0AD3EF solid 1px;
+       
+    }
+    
+    .imgBannerHead {
+        /* display: flex; */
+        /* justify-content: flex-start;
+        align-items: center; */
+        width: auto;
+        height: auto;
+        /* height: auto; */
+        /* border : 5px solid yellow; */
+        position: absolute;
+        left: 55%;
+        margin-top: 50px;
+    }
+    
+    
+    .imgBannerHead img{
+        height: 10%;
+        width: 75%;
+    }
+    
+    #btnContact {
+        background-color: #0ad3ef;
+        display: flex;
+        height: 20%;
+        width: 20%;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50px;
+        border : none ;
+        color :white;
+    }
 
 
 
@@ -415,6 +424,9 @@ a {
 
 
 
+
+
+
 .whatWeDo {
     width: 100%;
     display: flex;
@@ -424,6 +436,8 @@ a {
     background-color:#122061;
     background-image: url(../source/image/overly-img.png) ;
     padding: 1%;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .txtWhatWeDo {
@@ -439,6 +453,9 @@ a {
     color : #0bd2ef;
     margin: 0;
     padding: 1%;
+    letter-spacing: 3px;
+    font-size: 12px;
+
 }
 
 .txtWhatWeDo h1{
@@ -448,20 +465,20 @@ a {
 
 .imgWhatWeDo {
     height: 100%;
-    width: 100%;
+    width: 70%;
     display: flex;
     gap : 2%;
-    padding: 3%;;
+    padding: 3%;
 }
 
 .imgWhatWeDo img {
-    height: 20%;
-    width: 20%;
+    height: 30%;
+    width: 30%;
 }
 
 .imgWhatWeDo div {
-    height: 50%;
-    width: 50%;
+    height: 60%;
+    width: 25%;
     /* /* justify-content: flex-start; */
     align-items: flex-start; 
     flex-direction: column;
@@ -489,19 +506,26 @@ color : #5E70B5;
 } */
 
 .card {
-    height: 100%;
-    width: 30%;
+    height: 70%;
+    width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     background: #17256e;
     border-radius: 15px;
-    border: 3px solid #17256e;
+    /* border: 3px solid #17256e; */
     padding: 3%;
+    gap: 10px;
     
 }
 
+.card img {
+    margin-bottom: 30px;
+}
 
+.card p {
+    font-size: 14px;
+}
 .card:hover {
     border: 1px solid #0bd2ef;
 }
@@ -509,7 +533,18 @@ color : #5E70B5;
 .card:hover img {
     transform: translateY(-10px);
     transition: 0.5s;
+}
 
+#btnStartWwdo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background-color: #0ad3ef;
+    width: 8%;
+    /* height: 35%; */
+    padding: 0.7%;
+    /* border: 1px solid red */
 }
 
 /* #btnStart{
@@ -791,18 +826,19 @@ span{
 }
 .logoState div{
 color: white;
-height: 40%;
-width: 40%;
+height: 35%;
+width: 35%;
 background: #17256E;
 border-radius: 5%;
 display: flex;
 flex-direction: column;
 justify-content: center;
 align-items: center;
+gap: 10px;
 
 }
 
-.logoState h1{
+.logoState h2{
     margin: 0;
 }
 
@@ -810,29 +846,43 @@ align-items: center;
     color: rgba(248, 247, 247, 0.384);
     font-size:large;
     margin: 0;
-    padding: 0;
+    padding-bottom: 10px;
+}
+
+.logoState div img{
+    width: 20%;
+    height: 20%;
 }
 .textState{
     height: 90%;
     width: 35%;
-
     display: flex;
     align-items: center;
 }
 .txtStatistique{
     height: 80%;
     width: 80%;
+    gap: 10px;
+
 }
 .textState h1{
     font-size: xx-large;
     color: white;
+    padding-top: 3%;
+    line-height: 1;
+
 }
 .textState h4{
     color: #0bd2ef;
+    letter-spacing: 3px;
+
 }
 .textState p{
     color: rgba(248, 247, 247, 0.384);
     font-size: large;
+    padding-top: 3%;
+    padding-bottom: 7%;
+    line-height: 1.75;
 }
 .started a {
     color: white;
@@ -847,21 +897,24 @@ align-items: center;
 
 
 
+
+
+
+
+
 .ourNews {
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
     background-color:#0a1650 ;
     background-image: url(../img/dots-img\ reverse.png);
     background-size: auto;
     background-repeat: no-repeat;
     background-position: left;
-    
-    /* background-position-x: right; */
-    padding: 5%;
-    /* border: 5px solid red !important; */
 }
 
 .txtOurNews {
@@ -874,20 +927,24 @@ align-items: center;
 }
 
 .txtOurNews p{
-    color : #0bd2ef;
+    color: #0bd2ef;
     margin: 0;
-    padding: 1%;
+    /* padding: 1%; */
+    letter-spacing: 3px;
+
 }
 
 .txtOurNews h1{
     color : white !important;
-    margin-bottom : 2%;
+    margin: 1%;
+    /* margin-bottom : 2%; */
 }
 
 .deuxBlocs{
     display: flex;
     /* justify-content: space-between !important; */
-    gap : 5%;
+    border-radius: 10px;
+    width: 70%
 
     
 }
@@ -898,7 +955,7 @@ align-items: center;
     height: 40vh;
     background-size: cover;
     background-position: center ;
-    margin: 0 5%;
+    /* margin: 0 5%; */
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -955,16 +1012,34 @@ align-items: center;
     border-radius: 5px;
     margin : 5%; 
     transition: transform 3s ease;
+    gap: 10px;
 }
+
+.blocUn h1, .blocDeux h1 {
+    font-size: 20px;
+    margin-bottom: 15px;
+}
+
+#title {
+    font-size: 5px;
+}
+
 
 .blocDeux{
     background-image: url(../source/image/blog-post-img2.png);
     background-size: cover;
-    background-repeat: no-repeat; 
+    background-repeat: no-repeat;
+    background-position: center; 
     border-radius: 5px;
     margin : 5%; 
     transition: transform 3s ease;
-} 
+    gap: 10px;
+}
+
+.blocDeux h1{
+    padding-top: 20px;
+}
+
 
 
 #title:hover, #hTitle:hover, #read:hover {
@@ -974,24 +1049,25 @@ align-items: center;
 }
 
 #title {
-    font-size: 2vw;
+    font-size: 1vw;
     color:rgba(212, 206, 206, 0.57);
 }
 
 h1 {
     font-size: 3vw;
-    color : white;
+    color : rgba(251, 251, 251, 0.978);
 }
 
 #read
 {
-    font-size: 1.5vw;
     color : white !important;
+    margin-bottom: 5px !important;
 }
 
 a {
     text-decoration: none !important;
 }
+
 
 
 
@@ -1039,11 +1115,13 @@ a {
     color : #0bd2ef;
     margin: 0;
     padding: 1%;
+    letter-spacing: 3px;
+
 }
 
 .txtGetInTouch h1{
     color : white !important;
-    margin : 0;
+    margin-bottom: 45px;
 }
 
 
@@ -1076,7 +1154,8 @@ a {
 input {
     flex : 1;
     padding: 8px;
-    border: 1px solid #0ad3ef;
+    border: 1px solid #1b36a4;
+    border-radius: 5px;
     margin-right: 5px;
     background-color: #091853;
     flex-direction: row;
@@ -1088,13 +1167,31 @@ textarea {
     align-items: center;
     width: 100%;
     padding: 8px;
-    border: 1px solid #0ad3ef;
+    border: 1px solid #1b36a4;
+    border-radius: 5px;
     margin-right: 5px;
     background-color: #091853;
 }
 
+#name, #email, #phone, #message {
+    display: flex;
+    justify-content: center;
+    align-content: flex-start;
+    /* padding-left: 20px; */
+    padding: 20px;
+    color: #5866A9;
+}
+
+#name::placeholder, #email::placeholder, #phone::placeholder, #message::placeholder {
+    color: #5866A9;
+
+}
+
 .champsArea {
 flex-basis: 100%;}
+.champsArea textarea{
+    resize: none;
+}
 
 /* #btnContact {
     background-color: #0ad3ef;
@@ -1112,13 +1209,36 @@ flex-basis: 100%;}
     justify-content: center;
     align-items: center;
     height: 30%;
-    width: 30%;
+    width: 35%;
+    /* border: 1px solid red */
+    /* margin-bottom: 5px; */
+}
+
+.btnSubmit a {
+    padding: 10px;
+    width: 100%;
+}
+
+#btnSubmit {
+    margin-top: 15px;
+    background-color: #0ad3ef;
+    display: flex;
+    width: 20%;
+    height: 90%;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    padding: 2%;
+    color : white;
+    font-size: 15px;
+    gap: 10px;
 }
 
 #btnContact:hover {
     background-color:#091853 ;
     border: solid 1px #0ad3ef ;
 }
+
 
 
 
