--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,42 +1,45 @@
-@media (min-width:375px) and (max-width:426px) {
-    body{
-        width: 98%;
-        overflow-x: hidden;
-    }
+@media (min-width:0px) and (max-width:500px) {
+   
    header{
-    width: 98%;
+   width: 109%;
     display: flex;
     flex-direction: column;
     justify-content: center;
    } 
 
    nav{
-    width: 98%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: self-start;
+
+
+   }
+
+   .menuNav{
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
    .logoNav{
-    width: 30%;
-    height: 100%;
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
  
    }
    .logoNav img{
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
    }
 
- .menuNav{
-    width: 30%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-   }
+
    #btnContact{
     width: 80px;
+    height: 30PX;
    }
 
 
@@ -46,11 +49,16 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     
 
    }
    .infoHead img{
-    height: 50%;
+    height: 30%;
+   }
+   .infoCybersec{
+    display: flex;
+    flex-direction: column;
    }
    .bntHeader{
     width: 200px;
@@ -60,7 +68,7 @@
    .imgBannerHead{
     
     height: 60%;
-    width: 60%;
+    width: 50%;
    }
 
 
@@ -73,8 +81,8 @@
 
 
   .partners{
-    width: 98%;
-    height: 50em;
+    width: 109%;
+   
   }
 
   .imgPartners{
@@ -82,12 +90,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 75%;
+    gap: 20px;
+    
   }
 
   .imgPartners div {
-    height: 100%;
-    width: 25%;
+    height: 150px;
+    width: 200px;
   }
 
 
@@ -98,8 +107,10 @@
 
 
   .whoWeAre{
-    height: 70em;
-    width: 100%;
+    height: auto;
+    padding-bottom: 50px;
+    padding-top: 50px;
+    width: 109%;
     display: flex;
     flex-direction: column;
    
@@ -110,26 +121,31 @@
 
 
 .imgWhoWeAre{
-    height: 80%;
+   
     width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
+  
 }
 
 .whatWeDo {
-    width: 98%;
-    height: 60em;
+    width: 109%;
+    height: auto;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 .imgWhatWeDo{
     height: 80%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    gap: 15px;
 }
 .imgWhatWeDo div{
-    height: 40%;
-    width: 30%;
+    height: 240px;
+    width: 130px;
+    
    
   
 
@@ -144,11 +160,16 @@
 
 
 .cyberSecurity{
-    width: 100%;
-    height: 90em;
+    width: 109%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.bgCyber{
+    display: none;
 }
 
 .imgCyber{
@@ -183,11 +204,14 @@
 
 
 .state{
-    height: 80em;
+    width: 109%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .logoState {
@@ -222,7 +246,7 @@
 
 
 .ourNews{
-    width: 90%;
+    width: 109%;
 }
 
 
@@ -230,8 +254,11 @@
 
 
 .getInTouch{
-    width: 100%;
+    width: 109%;
+    justify-content: center;
+    align-items: center;
 }
+
 .form{
     display: flex;
     flex-wrap: wrap;
@@ -239,7 +266,8 @@
 }
 
 .btnSubmit{
-    width: 500px;
+    width: 450px;
+    padding: 0;
 }
 
 
@@ -248,25 +276,31 @@
 
 
 footer{
-    height: 80em;
+   width: 109%;
+   padding-top: 50px;
 }
 
 .footerTop{
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    height: 80%;
+    justify-content: center;
+    align-items: center;
+   
+    height: 50em;
     width: 100%;
 }
 
 .footerTop div{
     width: 100%;
     display: flex;
+    justify-content: center;
 
 }
 .logoFooter{
     height: 20%;
     width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 .logoFooter img{
   height: 100px;
@@ -276,12 +310,15 @@ footer{
 .aboutFooter{
     height: 20%;
     width: 40%;
+    justify-content: center;
+    align-items: center;
 }
 .servicesFooter{
     height: 20%;
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .resaux{
     height: 20%;
