--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,7 @@ header {
         background: url(../source/image/banner-overlay-img.png) ;
         background-color: #081750;
         background-size: cover;
+        background-position: center;
         /* background-color: #091853; */
         height: 50em;
         width: 100%;
@@ -93,6 +94,7 @@ header {
     }
     
     .menuNav a {
+        font-size: 15px;
         color : white ;
         text-decoration: none;
     }
@@ -121,7 +123,7 @@ header {
         /* align-content: flex-end; */
         height: 60% ;
         flex-direction: column;
-        margin-left: 250px;
+        margin-left: 300px;
         /* border : 1px solid green; */
         gap: 5px;
         padding-top: 130px;
@@ -197,7 +199,7 @@ header {
     
     .imgBannerHead img{
         height: 10%;
-        width: 75%;
+        width: 78%;
     }
     
     #btnContact {
